# pandas-workout

./: Dockerfile  LICENSE.txt  README.rst  requirements.txt  setup.cfg
docs/: conf.py  index.rst
src/pandas_workout/: __init__.py  __main__.py
src/pandas_workout/series/: exam_scores.py
tests/: test_exam_scores.py  test_pandas_workout.py
