[metadata]
name = pandas_workout
version = attr:pandas_workout.__version__
description = Excercises from the Manning book Pandas Workout.
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
author = Bryan Patrick Wood
author_email = bpw1621@gmail.com
url = https://github.com/bpw1621/pandas-workout
download_url = https://github.com/bpw1621/pandas-workout/archive/master.zip
project_urls =
    Homepage = https://bpw1621.github.io/pandas-workout
    Source Code = https://github.com/bpw1621/pandas-workout
    Documentation = https://pandas-workout.readthedocs.io/en/latest/
    Bug Tracker = https://github.com/bpw1621/pandas-workout/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

;keywords = ... TODO
;license = ... TODO

[options]
zip_safe = False
include_package_data = True
package_dir = =src
packages = find:
;install_requires =
setup_requires =
    setuptools
    wheel

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[options.extras_require]
api =
    fastapi
base =
    debtcollector
    humanize
    importlib_resources; python_version < "3.7"
    joblib
    more-itertools
    pluggy
    python-dotenv
    regex
    requests
    tqdm
cli =
    typer
dev =
    flake8
    pretty_errors
    tox
    twine
doc =
    sphinx
    sphinx_rtd_theme
    towncrier
gui =
    streamlit
nlp =
    gensim
    nltk
    pyldavis
    scattertext
    spacy
    stanza
    textacy
    wordcloud
test =
    pytest
    pytest-cov
    pytest-mock
all =
    debtcollector
    humanize
    importlib_resources; python_version < "3.7"
    joblib
    more-itertools
    pluggy
    python-dotenv
    regex
    requests
    tqdm
    fastapi
    typer
    flake8
    pretty_errors
    tox
    twine
    sphinx
    sphinx_rtd_theme
    towncrier
    streamlit
    gensim
    nltk
    pyldavis
    scattertext
    spacy
    stanza
    textacy
    wordcloud
    pytest
    pytest-cov
    pytest-mock

[options.entry_points]
console_scripts =
    pandas-workout = pandas_workout.pandas_workout:main

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']